[GroupRework] Update doc
